--- a/requirements.txt
+++ b/requirements.txt
@@ -32,3 +32,55 @@ rsa==4.9.1
 six==1.17.0
 tzdata==2025.2
 urllib3==2.5.0
+altair==5.5.0
+attrs==25.3.0
+blinker==1.9.0
+cachetools==5.5.2
+certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.1.8
+db-dtypes==1.4.3
+gitdb==4.0.12
+GitPython==3.1.45
+google-api-core==2.25.1
+google-auth==2.40.3
+google-cloud-bigquery==3.37.0
+google-cloud-bigquery-storage==2.33.1
+google-cloud-core==2.4.3
+google-cloud-storage==3.3.1
+google-crc32c==1.7.1
+google-resumable-media==2.7.2
+googleapis-common-protos==1.70.0
+grpcio==1.74.0
+grpcio-status==1.74.0
+idna==3.10
+Jinja2==3.1.6
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+MarkupSafe==3.0.2
+narwhals==2.4.0
+numpy==2.0.2
+packaging==25.0
+pandas==2.3.2
+pillow==11.3.0
+proto-plus==1.26.1
+protobuf==6.32.0
+pyarrow==21.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pydeck==0.9.1
+python-dateutil==2.9.0.post0
+pytz==2025.2
+referencing==0.36.2
+requests==2.32.5
+rpds-py==0.27.1
+rsa==4.9.1
+six==1.17.0
+smmap==5.0.2
+streamlit==1.49.1
+tenacity==9.1.2
+toml==0.10.2
+tornado==6.5.2
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
