--- a/dbt/models/staging/voterfile/voterfile.yml
+++ b/dbt/models/staging/voterfile/voterfile.yml
@@ -8,4 +8,4 @@ models:
         tests:
           - not_null
           - dbt_utils.expression_is_true:
-              expression: "total_votes >= 0"
+              expression: ">= 0"
